# GrupalBackedSW

./: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml  python-quality-architecture.skill  requirements.txt  run.py
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  7f43134b7e86_esquema_completo_tesisguard.py  a1b2c3d4e5f6_features_y_indice_metricas.py  a7b8c9d0e1f2_preferencias_usuario.py  b2c3d4e5f6a7_pausas_largas_en_metricas.py  c3d4e5f6a7b8_coherencia_discurso_documento.py  d4e5f6a7b8c9_estado_etico_documento.py  e5f6a7b8c9d0_notificacion_usuario.py  f6a7b8c9d0e1_comparacion_versiones.py
app/: main.py
app/core/: config.py  database.py  enums.py  event_loop.py  exceptions.py  internal_auth.py  repository.py  security.py
app/core/audit/: models.py  service.py
app/integrations/: factory.py
app/integrations/analysis/: __init__.py  aws.py  aws_check.py  etica.py  extraction.py  features.py  port.py  stub.py  textract.py
app/integrations/aws/: check.py  session.py
app/integrations/biometric/: aws.py  port.py  stub.py  transcribe.py  transcribe_check.py
app/integrations/email/: console.py  port.py
app/integrations/evaluador/: local.py  port.py
app/integrations/llm/: __init__.py  _generativo.py  claude.py  deepseek.py  documento.py  gemini.py  gemini_embeddings.py  port.py  stub.py
app/integrations/payments/: port.py  stripe_gateway.py
app/integrations/storage/: local.py  port.py
app/integrations/transcription/: aws.py  port.py  stub.py
app/integrations/tts/: aws.py  port.py  stub.py
app/ml/: predictor.py  rubrica.py
app/ml/training/: entrenar.py  etiquetar.py  generar_dataset.py  validar.py
app/models/: __init__.py  base.py  registry.py
app/modules/: __init__.py
app/modules/administracion/: __init__.py  router.py
app/modules/auditoria_documental/: __init__.py  router.py
guias/bases de datos/: tesisguard_diagrama.mdj  tesisguard_esquema.sql
seed/: __main__.py  planes.py  usuarios.py
tests/: conftest.py  test_analysis_extractor.py  test_auditoria.py  test_biometrico.py  test_dashboard.py  test_deepseek.py  test_documentos.py  test_etica.py  test_health.py  test_integracion.py  test_monitoreo.py  test_notificaciones.py  test_pagos.py  test_reportes.py  test_simulaciones.py  test_suscripciones.py  test_tribunal.py  test_usuarios.py
(+94 files in other folders)
